[package]
name = "bridge-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
solana-program = "=1.17.0"
spl-token = "=3.5.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
default = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
