[workspace]
members = ["programs/bridge-vault", "relayer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Raghavender Singh"]
license = "MIT"
repository = "https://github.com/RaghavenderSingh/bridge-vault"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
