[package]
name = "bridge-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"

# Blockchain
solana-client = "=1.17.0"
solana-sdk = "=1.17.0"
# ethers = "2.0"  # Will add separately to avoid dep conflicts

# Config
dirs = "5.0"
toml = "0.8"
