[package]
name = "bridge-cli"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"

# HTTP client for relayer API
reqwest = { version = "0.12", features = ["json"] }

# Config
dirs = "5.0"
toml = "0.8"
