[package]
name = "relayer"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono", "macros"] }

# Blockchain clients (v2.1+ fixes curve25519-dalek/zeroize conflicts)
solana-client = "~2.1"
solana-sdk = "~2.1"
solana-transaction-status = "~2.1"
anchor-lang = "0.31.0"
borsh = "1.5"

# Ethereum - Using alloy for better compatibility
alloy = { version = "0.6", features = ["full", "node-bindings", "rpc-types-eth", "signer-local"] }
alloy-sol-types = "0.8"

# Config
dotenv = "0.15"
config = "0.13"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
secp256k1 = "0.28"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

# Utilities
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
