[package]
name = "bridge-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.0"
solana-program = "~2.1"
spl-token = "~6.0"
thiserror = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "1.0", default-features = false, features = ["u64_backend"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
default = []
test-sbf = []
